# astro-HexMaps

./: PyStructure.conf  README.md  config.txt  create_database.py  pyproject.toml  run_hexmaps.py
analysis/: hexmaps_analysis.py  hexmaps_example.ipynb
conversion_from_pystructure/: config_conversion.py  hfs_lines_conversion.py  target_definitions_conversion.py
docs/source/: HexMapsFunctions.rst  advanced.rst  codeStruct.rst  conf.py  config.rst  hfs_lines.rst  index.rst  installing.rst  quickstart.rst  reading.rst  simpleExample.rst  target_definitions.rst
hexmaps/: __init__.py  cli.py  download_example.py  handler_keys.py  handler_pipeline.py  handler_sources.py  hexmaps_analysis.py  init_workdir.py  logger.py  stage_fits.py  stage_products.py  stage_regrid.py  test_hexmaps.py  utils_fits.py  utils_table.py
hexmaps/templates/: config.txt
keys/: hfs_lines.txt  my_hfs_lines.txt  my_target_definitions.txt  target_definitions.txt
scripts/: mom_computer.py  processing_spec.py
