[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-hexmaps"
version = "5.0.0"
description = "HexMaps: Hexagonal-grid Multi-data Analysis and Processing Software for multi-wavelength astronomical datasets."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jakob den Brok",  email = "jadenbrok@mpia.de"     },
    { name = "Lukas Neumann",   email = "lukas.neumann@eso.org" },
]
keywords = ["astronomy", "astrophysics", "FITS", "radio", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "astropy>=5.0",
    "numpy>=1.22",
    "pandas>=1.4",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "reproject>=0.9",
    "radio_beam>=0.3.4",
    "spectral_cube>=0.6",
    "scikit-image>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "black",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "numpydoc",
]

[project.scripts]
hexmaps = "hexmaps.cli:main"

[project.urls]
Homepage      = "https://github.com/PhangsTeam/HexMaps"
Repository    = "https://github.com/PhangsTeam/HexMaps"
Issues        = "https://github.com/PhangsTeam/HexMaps/issues"
Documentation = "https://hexmaps.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
where   = ["."]
include = ["hexmaps*"]

[tool.setuptools.package-data]
hexmaps = [
    "templates/config.txt",
    "templates/keys/*.txt",
    "templates/run_hexmaps.py",
    "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["hexmaps"]
python_files = ["test_*.py"]
